修缮碰撞处理，及相关的信息处理

--- a/clv-game-chuachua/src/main/webapp/WEB-INF/web.xml
+++ b/clv-game-chuachua/src/main/webapp/WEB-INF/web.xml
@@ -38,6 +38,11 @@
 		<servlet-name>dispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>dispatcher</servlet-name>
+		<url-pattern>/index</url-pattern>
+	</servlet-mapping>
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
@@ -45,4 +50,9 @@
 		<listener-class>
 			org.springframework.web.context.request.RequestContextListener</listener-class>
 	</listener>
+	
+	<welcome-file-list>
+        <welcome-file>index</welcome-file>
+    </welcome-file-list>
+	
 </web-app>
