--- a/clv-game-chuachua/pom.xml
+++ b/clv-game-chuachua/pom.xml
@@ -78,10 +78,6 @@
 		</dependency>
 		<!-- db end -->
 		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 		</dependency>
@@ -152,7 +148,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
-					<failOnMissingWebXml>false</failOnMissingWebXml>
+					<include>**/test/*.java</include>
 				</configuration>
 			</plugin>
 		</plugins>
